--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-271.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-154.9KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
-  - {name: 🇺🇸 美国-386.7KB/s(Youtube:不良林), server: us02.gogogoo.cyou, port: 443, type: vmess, uuid: db5d1aa3-908b-44d1-be0a-4e6a8d4e4cda, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /go, ws-headers: {Host: us02.gogogoo.cyou}}
-  - {name: 🇨🇳 中国-229.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 (已存活1天)中国-2.91MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇺🇸 美国-1.04MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-730.4KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-818.3KB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-986.8KB/s(Youtube:不良林), server: 104.224.141.225, port: 700, type: ss, cipher: chacha20-ietf-poly1305, password: bSdsFZtHhbAl}
+  - {name: 🇻🇳 越南-6.06MB/s(Youtube:不良林), server: 103.173.255.21, port: 28443, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, skip-cert-verify: true}
+  - {name: 🇭🇰 (已存活4天)香港-1.79MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
   - {name: 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林), server: v001.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /a11-dCeBnloadPy, ws-headers: {Host: v001.v2dns.bar}}
-  - {name: 🇸🇬 新加坡-472.6KB/s(Youtube:不良林), server: trojan3.udpgw.com, port: 443, type: trojan, password: 8db1b560-019d-11ed-8bdf-1239d0255272, sni: trojan3.udpgw.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-216.0KB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
+  - {name: 🇺🇸 美国-351.0KB/s(Youtube:不良林), server: 167.88.61.2, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 未知国家-826.8KB/s(Youtube:不良林), server: ifffffffuuuuuuus.qiqicdn2.cf, port: 443, type: vmess, uuid: 5a36cce4-0527-4d36-bf4a-6c215ef9c524, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /5a36cce4-0527-4d36-bf4a-6c215ef9c524-vmess, ws-headers: {Host: ifffffffuuuuuuus.qiqicdn2.cf}}
+  - {name: 🇯🇵 日本-1.41MB/s(Youtube:不良林), server: 152.69.193.245, port: 80, type: vmess, uuid: 6697776b-d009-413b-8708-822ee2e02515, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 152.69.193.245}}
+  - {name: 🇦🇺 澳大利亚-404.1KB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 🇦🇺 澳大利亚-367.2KB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-271.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-154.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-386.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-229.0KB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-2.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-730.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-818.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-986.8KB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.06MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活4天)香港-1.79MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-472.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-216.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-351.0KB/s(Youtube:不良林)
+      - 未知国家-826.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-404.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-367.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-271.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-154.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-386.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-229.0KB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-2.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-730.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-818.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-986.8KB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.06MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活4天)香港-1.79MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-472.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-216.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-351.0KB/s(Youtube:不良林)
+      - 未知国家-826.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-404.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-367.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-271.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-154.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-386.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-229.0KB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-2.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-730.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-818.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-986.8KB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.06MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活4天)香港-1.79MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-472.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-216.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-351.0KB/s(Youtube:不良林)
+      - 未知国家-826.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-404.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-367.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 (已存活4天)香港-1.79MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-271.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-154.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-386.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-229.0KB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-2.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-730.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-818.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-986.8KB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.06MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活4天)香港-1.79MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-472.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-216.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-351.0KB/s(Youtube:不良林)
+      - 未知国家-826.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-404.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-367.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-271.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-154.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-386.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-229.0KB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-2.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-730.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-818.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-986.8KB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.06MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活4天)香港-1.79MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-472.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-216.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-351.0KB/s(Youtube:不良林)
+      - 未知国家-826.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-404.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-367.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-271.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-154.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-386.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-229.0KB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-2.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-730.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-818.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-986.8KB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.06MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活4天)香港-1.79MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-472.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-216.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-351.0KB/s(Youtube:不良林)
+      - 未知国家-826.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-404.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-367.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-271.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-154.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-386.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-229.0KB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-2.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-730.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-818.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-986.8KB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.06MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活4天)香港-1.79MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-472.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-216.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-351.0KB/s(Youtube:不良林)
+      - 未知国家-826.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-404.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-367.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
